samples/_failures_safe/1761268060_fba3f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95a3bb5b.c: In function ‘main’:
./samples/SAFE/__tmp_95a3bb5b.c:167:12: error: expected identifier or ‘(’ at end of input
  167 |     struct Token
      |            ^~~~~
./samples/SAFE/__tmp_95a3bb5b.c:167:12: error: expected declaration or statement at end of input
